fix: ogpの拡張子, %publicurlの理解

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <meta property="og:site_name" content="Shimon Dotera's Site" />
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="%PUBLIC_URL%/ogp.png" />
-    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogp.jpg" />
+    <meta property="og:url" content="https://numecha.vercel.app/" />
     <meta property="og:title" content="Shimon Dotera's Site" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
